--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <span class="icon">
-                            <a href="https://github.com/BryanJaraGit/">
+                            <a href="https://github.com/BryanJaraGit/" target="_blank">
                                 <i class="fa fa-github" aria-hidden="true"></i>
                             </a>
                             </span>
