--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3 class="title">Idiomas</h3>
                 <ul>
                     <li>
-                        <span class="text">Ingles</span>
+                        <span class="text">Inglés</span>
                         <span class="percent1"></span>
                         
                     </li>
@@ -146,7 +146,7 @@
                         <h5><strong> TDA Telecomunicaciones</strong></h5>
                     </div>
                     <div class="text">
-                        <h4>Ejectutivo Telemarketing</h4>
+                        <h4>Ejecutivo Telemarketing</h4>
                         <ul>
                             <li>
                                 Gestión de estrategias de marketing y campañas de promoción 
@@ -195,7 +195,7 @@
                         <h5><strong>Contacto Contact Center</strong></h5>
                     </div>
                     <div class="text">
-                        <h4>Ejectutivo Telemarketing</h4>
+                        <h4>Ejecutivo Telemarketing</h4>
                         <ul>
                             <li>
                                 Mantener buenas relaciones con los clientes para lograr los objetivos de ventas.
@@ -247,7 +247,7 @@
                     <li><i class="fa fa-music" aria-hidden="true"></i> Música</li>
                     <li><i class="fa fa-futbol-o" aria-hidden="true"></i> Deportes</li>
                     <li><i class="fa fa-gamepad" aria-hidden="true"></i> Videojuegos</li>
-                    <li><i class="fa fa-glass" aria-hidden="true"></i> Reuniones</li>
+                    <li><i class="fa fa-glass" aria-hidden="true"></i> Reuniónes</li>
                 </ul>
             </div>
 
